tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/instanceip/instance_IP_with_localhost_sidecar/_test_context/Sidecar.75262054.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-98059
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 127.0.0.1:18082
    port:
      number: 18082
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
